--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,4 +1,5 @@
 logo = "images/logo.png"
+footerLogo  = "images/logo-m.png"
 # Meta data
 description = "Sommos Site - Powered by hugo + Themefisher/meghna + Netlify"
 author = "Sommos"
