Bundle css files

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -9,6 +9,13 @@ google_analitycs_id = "G-81H578T2QX"
 post_share = true
 
 [plugins]
+css = [
+  "plugins/bootstrap/bootstrap.min.css",
+  "plugins/themify-icons/themify-icons.css",
+  "plugins/magnific-popup/magnific-popup.css",
+  "plugins/slick/slick.css",
+  "fonts/pt-mono.css"
+]
 
 js = [
   "plugins/jquery/jquery.min.js",
@@ -24,34 +31,6 @@ js = [
 [preloader]
 enable = true
 preloader = "images/logo.png"
-
-# css plugins
-[[plugins.css]]
-link = "plugins/bootstrap/bootstrap.min.css"
-[[plugins.css]]
-link = "plugins/themify-icons/themify-icons.css"
-[[plugins.css]]
-link = "plugins/magnific-popup/magnific-popup.css"
-[[plugins.css]]
-link = "plugins/slick/slick.css"
-[[plugins.css]]
-link = "https://fonts.googleapis.com/css?family=Anaheim|Quattrocento+Sans:400,700&display=swap"
-
-# js plugins
-[[plugins.js]]
-link = "plugins/jquery/jquery.min.js"
-[[plugins.js]]
-link = "plugins/bootstrap/bootstrap.min.js"
-[[plugins.js]]
-link = "plugins/slick/slick.min.js"
-[[plugins.js]]
-link = "plugins/shuffle/shuffle.min.js"
-[[plugins.js]]
-link = "plugins/magnific-popup/jquery.magnific-popup.min.js"
-[[plugins.js]]
-link = "plugins/lazy-load/lozad.min.js"
-[[plugins.js]]
-link = "plugins/google-map/map.js"
 
 # social
 [[social]]
