Add bookings section

--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -4,6 +4,11 @@ URL = "about"
 weight = 1
 
 [[main]]
+name = "Bookings"
+URL = "pricing"
+weight = 2
+
+[[main]]
 name = "Contact"
 URL = "contact"
-weight = 2
+weight = 3
