Tweak about phrase

--- a/data/en/about.yml
+++ b/data/en/about.yml
@@ -25,6 +25,7 @@ about:
       title: We're Future
       content: >
         SOMMOS is a digital networking community within the event industry,
-        bringing freelancers and businesses together. It is time to put the
-        brakes on endless freelance research with no guarantees and say hello to
-        successful synergies in the marketplace to ease your precious time.
+        bringing professional freelancers and businesses together. It is time
+        to put the brakes on endless freelance research with no guarantees and
+        say hello to successful synergies in the marketplace to ease your
+        precious time.
