--- a/data/en/bookings.yml
+++ b/data/en/bookings.yml
@@ -4,40 +4,27 @@ bookings:
   title: Book Us
   bookings_table:
 
-    - name: Home office
+    - name: Home Office
       price: 300€
       unit: 8 hours
-      services:
-        - 35€ additional hour
-      button:
-        label: "Contact"
-        link: "#contact"
+      link: "#contact"
 
-    - name: Onsite Coordinator
+    - name: Full Day Onsite Coordinator
       price: 450€
       unit: 12 hours
-      services:
-        - 40€ event additional hour
-        - 200€ dinner coordination
-        - 200€ airport transfer
-        - 60€ full day diet
-        - 0,65€/km mileage
-        - Taxi between 00.00h and 8.00h
-      button:
-        label: "Contact"
-        link: "#contact"
+      link: "#contact"
 
-    - name: Half day Onsite Coordinator
+    - name: Half Day Onsite Coordinator
       price: 300€
       unit: 6 hours
-      services:
-        - 40€ event additional hour
-        - 200€ dinner coordination
-        - 200€ airport transfer
-        - 30€ half day diet
-        - 0,65€/km mileage
-        - Taxi between 00.00h and 8.00h
-      button:
-        label: "Contact"
-        link: "#contact"
+      link: "#contact"
 
+    - name: Dinner coordination
+      price: 250€
+      unit: 5 hours
+      link: "#contact"
+
+    - name: Airport transfer
+      price: 200€
+      unit: 2 hours
+      link: "#contact"
