--- a/data/en/team.yml
+++ b/data/en/team.yml
@@ -34,12 +34,8 @@ team:
       designation : Freelance Event Manager
       description : |
         Areti is an open minded freelance, with broad adaptability to new last minute situations.
-        Very emphatic with clients and a great onsite multi-tasker.
-      skills:
-        - ♌
-        - 💃
-        - 🧳
-        - 🥬
+        Very emphatic with clients and a great onsite multitasker.
+        She is the right one to manage the logistics in big scale events.
       quiz:
         - Clicker
         - Brainstorming
@@ -48,21 +44,21 @@ team:
         - I'm a 4x4
       languages:
         - name: French
-          percent: 100%
+          percent: 60%
         - name: Greek
-          percent: 100%
-        - name : English
-          percent : 80%
+          percent: 60%
         - name : Dutch
           percent : 60%
-        - name : German
-          percent : 60%
+        - name : English
+          percent : 50%
         - name : Spanish
-          percent : 60%
-        - name : Hebrew
-          percent : 20%
+          percent : 50%
+        - name : German
+          percent : 40%
         - name : Portuguese
-          percent : 20%
+          percent : 40%
+        - name : Hebrew
+          percent : 30%
 
     - name : Aroha Doña
       image_webp : profiles/aroha.dona/image.webp
@@ -70,11 +66,6 @@ team:
       designation : CEO Co-Founder
       description : |
         Aroha is an ...
-      skills:
-        - ♋
-        - 🏃‍♀
-        - 📚
-        - 🍱
       quiz:
         - Laptop
         - Brainstorming
@@ -98,13 +89,7 @@ team:
       image : profiles/camille.degenne/image.jpg
       designation : Freelance Event Manager
       description : |
-        Camille is a great team player, pro active in solution finding, multi-tasker & client oriented person.
-        If you look for someone to coordinate logistics of big scale events, she is the one.
-      skills:
-        - ♒
-        - 🧘‍♀️
-        - 🎾
-        - 🥟
+        She is a great team player, pro active in solution finding, multi-tasker & client oriented person. If you look for someone to coordinate logistics of big scale events, she is the one. She can easily work as both producer and onsite coordinator.
       quiz:
         - Clicker
         - Excel
@@ -113,208 +98,165 @@ team:
         - I'm a 4x4
       languages:
         - name: French
-          percent: 100%
+          percent: 60%
         - name : English
-          percent : 90%
+          percent : 50%
         - name : Italian
-          percent : 60%
+          percent : 50%
         - name : Spanish
-          percent : 60%
+          percent : 40%
 
     - name : Carla Doña
       image_webp : profiles/carla.dona/image.webp
       image : profiles/carla.dona/image.jpg
       designation : CEO Co-Founder
       description : |
-        Carla is an ...
-      skills:
-        - ♈
-        - 🧘‍♀️
-        - 📚
-        - 🥗
+        She is an extremely positive, energetic, enthusiastic and self-motivated person working in the events industry. Some of her specialities include first class interpersonal and communication skills at all levels, excellent organizational skills mainly working under pressure, and high problem-solving ability at her every day work tasks.
       quiz:
         - Clicker
-        - Excel
-        - Backstage
-        - Speaker
+        - Brainstorming
+        - Stage
+        - Artist
         - I'm a 4x4
       languages:
         - name: Spanish
-          percent: 100%
-        - name: Catalan
-          percent: 100%
-        - name : English
-          percent : 90%
+          percent: 70%
+        - name: English
+          percent: 70%
         - name : French
-          percent : 60%
+          percent : 50%
         - name : Italian
-          percent : 60%
+          percent : 40%
 
     - name : Coline Basys
       image_webp : profiles/coline.bassy/image.webp
       image : profiles/coline.bassy/image.jpg
       designation : CEO Co-Founder
       description : |
-        Coline is an ...
-      skills:
-        - ♍
-        - 🎭
-        - ⛵
-        - 🍝
+        Vibrant, enthusiastic and very easygoing freelance. She has  broad experience in incentives, tourism and medium scale events.  Our youngest and favorite dreamer looking for big challenges, very client oriented and committed to her work.She shares her passion to events with arts, and theatre working as a voice actress, dubbing series, documentaries and films in French.
       quiz:
-        - Clicker
-        - Excel
+        - Laptop
+        - Brainstormig
         - Backstage
-        - Speaker
+        - Artist
         - I'm a 4x4
       languages:
         - name: French
-          percent: 100%
+          percent: 60%
         - name: English
-          percent: 90%
+          percent: 50%
         - name : Spanish
-          percent : 60%
+          percent : 50%
+        - name : Italian
+          percent : 40%
 
     - name : Inés Arnal
       image_webp : profiles/ines.arnal/image.webp
       image : profiles/ines.arnal/image.jpg
       designation : Freelance Event Manager
       description : |
-        Empathetic, responsible, decisive and detail-oriented person with team work skills,
-        excellent customer handling and always willing to exceed objectives.
-      skills:
-        - ♋
-        - 🎥
-        - 🧘
-        - 🥟
+        Extremely responsible and detail-oriented freelance. An excellent customer handling with large patience who is always willing to exceed objectives. She is one of our best logistics production manager in Hotel and F&B industry. None cannot love Inés for her great teamwork skills.
       quiz:
-        - Clicker
-        - Excel
+        - Laptop
+        - Brainstormer
         - Backstage
         - Speaker
         - I'm a 4x4
       languages:
         - name: Spanish
-          percent: 100%
+          percent: 60%
         - name : English
-          percent : 90%
+          percent : 50%
         - name: German
-          percent: 20%
+          percent: 30%
 
     - name : Isabelle Bonneau
       image_webp : profiles/isabelle.bonneau/image.webp
       image : profiles/isabelle.bonneau/image.jpg
       designation : Freelance Event Manager
       description : |
-        Expert in project management - communication and events, digital marketing and
-        DMC operations - I feel motivated by challenges and the energy to surpass them.
-      skills:
-        - ♒
-        - 🎾
-        - 🧶
-        - 🧀
+        Isabelle is beyond multi-tasker by far, a highly qualified freelance whose expertise part from event manager and onsite coordinator is communication and digital marketing. Creativity, empathic and extremely organized are some of her strengths.
       quiz:
-        - Clicker
-        - Excel
+        - Laptop
+        - Brainstorm
         - Backstage
-        - Speaker
+        - Artist
         - I'm a 4x4
       languages:
         - name: French
-          percent: 100%
+          percent: 60%
         - name : English
-          percent : 90%
+          percent : 50%
         - name : Spanish
-          percent : 60%
-        - name : Catalan
-          percent : 60%
+          percent : 50%
         - name: German
-          percent: 20%
+          percent: 30%
 
     - name : Isabel Lavandeira
       image_webp : profiles/isabel.lavandeira/image.webp
       image : profiles/isabel.lavandeira/image.jpg
       designation : Freelance Event Manager
       description : |
-        Positive, determined, decisive and passionate about her work.
-        A great team player who stands for a big smile to face problems.
-        She loves production and taking projects from A to Z.
-      skills:
-        - ♓
-        - 🧳
-        - 👪
-        - 🥘
+        Positive, determined, decisive and passionate about her work. A great team player who stands for a big smile to face problems. She loves production and taking projects from A to Z.
       quiz:
-        - Clicker
+        - Laptop
         - Excel
         - Backstage
         - Speaker
         - I'm a 4x4
       languages:
         - name: Spanish
-          percent: 100%
-        - name: Catalan
-          percent: 100%
-        - name : English
-          percent : 90%
-        - name: French
           percent: 60%
+        - name : English
+          percent : 50%
+        - name: French
+          percent: 50%
         - name : Italian
-          percent : 60%
+          percent : 50%
+        - name : Dutch
+          percent : 20%
 
     - name : Jorge Bermúdez
       image_webp : profiles/jorge.bermudez/image.webp
       image : profiles/jorge.bermudez/image.jpg
       designation : Freelance Event Manager
       description : |
-        He is our English Gentleman, the client oriented freelance par
-        excellence with a technical approach as an added value to his profile.
-      skills:
-        - ♏
-        - 🏊‍♀️
-        - 🚣‍♀️
-        - 🌯
+        He is our English Gentleman, the client oriented freelance par excellence with a technical approach as an added value to his profile. He is a great producer with also large experience in car launch onsite management
       quiz:
-        - Clicker
-        - Excel
-        - Backstage
-        - Speaker
+        - Laptop
+        - Brainstorming
+        - Stage
+        - Artist
         - I'm a 4x4
       languages:
         - name: Spanish
-          percent: 100%
+          percent: 60%
         - name : English
-          percent : 90%
-        - name : Portuguese
           percent : 60%
-
+        - name : Portuguese
+          percent : 40%
+        - name : French
+          percent : 30%
 
     - name : Vyara Pelova
       image_webp : profiles/vyara.pelova/image.webp
       image : profiles/vyara.pelova/image.jpg
       designation : Freelance Event Manager
       description : |
-        She is very sharp in execution and planning events.
-        An extremely client oriented freelance with high self confidence.
-        Great effectivity in problem solving.
-      skills:
-        - ♊
-        - 🏃‍♀️
-        - 🌶
+        She is very sharp in execution and planning events. An extremely client oriented freelance with high self confidence. Great effectivity in problem solving.
+        Her main areas of expertise are onsite coordination of big scale events and pre- and post-event planning.
       quiz:
-        - Clicker
+        - Laptop
         - Excel
         - Backstage
         - Speaker
         - I'm a 4x4
       languages:
         - name: Bulgarian
-          percent: 100%
+          percent: 60%
         - name : English
-          percent : 90%
+          percent : 60%
         - name : Spanish
-          percent : 90%
-        - name : Catalan
           percent : 60%
         - name : German
           percent : 60%
