Add Aroha short bio

--- a/data/en/team.yml
+++ b/data/en/team.yml
@@ -65,7 +65,9 @@ team:
       image : profiles/aroha.dona/image.jpg
       designation : CEO Co-Founder
       description : |
-        Aroha is an ...
+        She is a people lover.
+        A highly commited freelancer with a special eye on details, good taste and creative concept.
+        Trying always to think out of the box to get a surprises effect on whatever she is up to.
       quiz:
         - Laptop
         - Brainstorming
